--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,11 @@ group 'org.example'
 version '1.0-SNAPSHOT'
 
 dependencies {
-    providedCompile 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'org.springframework.boot:spring-boot-starter-security'
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile 'org.postgresql:postgresql'
 }
