--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-security'
     compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile 'org.postgresql:postgresql'
+    compile 'org.webjars:bootstrap:4.4.1'
+
 }
