--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,16 @@ buildscript {
     }
 }
 
+plugins {
+    id 'net.ltgt.apt' version '0.20'
+}
+
 apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'net.ltgt.apt-idea'
+apply plugin: 'net.ltgt.apt-eclipse'
 
 repositories {
     mavenCentral()
@@ -25,8 +31,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-starter-security'
-    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile 'org.postgresql:postgresql'
     compile 'org.webjars:bootstrap:4.4.1'
-
+    implementation 'org.mapstruct:mapstruct:1.3.1.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
 }
