--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-starter-security'
+    compile 'org.springframework.boot:spring-boot-starter-mail'
     compile 'org.postgresql:postgresql'
     compile 'org.webjars:bootstrap:4.4.1'
     implementation 'org.mapstruct:mapstruct:1.3.1.Final'
