--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-mail'
     compile 'org.postgresql:postgresql'
     compile 'org.webjars:bootstrap:4.4.1'
+    compile 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'org.mapstruct:mapstruct:1.3.1.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
 }
