--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,7 @@ app:
     signup:
       lifetime: 3
 
+
 email:
   smtp:
     host: a
@@ -54,4 +55,6 @@ email:
         body:
 
 
-
+logging:
+  level:
+    root: DEBUG
