--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,8 @@ app:
       breaktime: 1
     signup:
       lifetime: 3
+    forgot:
+      lifetime: 3
 
 
 email:
@@ -55,6 +57,6 @@ email:
         body:
 
 
-logging:
-  level:
-    root: DEBUG
+#logging:
+#  level:
+#    root: DEBUG
