--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,39 +24,34 @@ server:
         max-age: 9999999
 
 app:
-  hostname: e
+  hostname: localhost:8090
   auth:
     signin:
-      tries: 3
-      breaktime: 1
+      tries: 3          # number of failed tries of signin (login) before disable this user temporarily
+      breaktime: 30     # time (in minutes) for a user to be disabled afted failed tries
     signup:
-      lifetime: 3
+      lifetime: 3       # lifetime (in days) of registration activation URL sent to a new user
     forgot:
-      lifetime: 3
+      lifetime: 3       # lifetime (in days) of change password URL sent to a user
 
 
 email:
   smtp:
-    host: a
-    port: 993
-  username: a
-  password: b
+    host: smtp.mail.ru
+    port: 465
+  username: test@mail.ru
+  password: testtest
   template:
     auth:
       activation:
-        subject:
-        body:
+        subject: "[Bloggy] Activate your profile"
+        body: "Please, follow this link to activate your profile in Bloggy: %s"
       confirmation:
-        subject:
-        body:
+        subject: "[Bloggy] Successful registration"
+        body: "Congratulations! You have benn successfully registrated in Bloggy!"
       reset:
-        subject:
-        body:
+        subject: "[Bloggy] Change your password"
+        body: "Please, follow this link to change your password: %s"
       success:
-        subject:
-        body:
-
-
-#logging:
-#  level:
-#    root: DEBUG
+        subject: "[Bloggy] Your password is changed"
+        body: "Yo have successfully change your password"
