Moved necessary properties to exterior config file. Added logging with Logback

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,65 +1,2 @@
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/bloggydb
-    username: bloggy
-    password: bloggy
-  jpa:
-    database-platform: org.hibernate.dialect.PostgreSQL94Dialect
-    hibernate:
-      ddl-auto: update
-      naming:
-        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
-    properties:
-      hibernate:
-        format_sql: true
-  mail:
-    properties:
-      mail:
-        smtp:
-          auth: true
-          connectiontimeout: 10000
-          timeout: 10000
-          writetimeout: 10000
-
-server:
-  port: 8090
-  servlet:
-    session:
-      cookie:
-        name: bloggytoken
-        secure: false
-        http-only: false
-        max-age: 9999999
-
-app:
-  hostname: localhost:8090
-  auth:
-    signin:
-      tries: 3          # number of failed tries of signin (login) before disable this user temporarily
-      breaktime: 30     # time (in minutes) for a user to be disabled afted failed tries
-    signup:
-      lifetime: 3       # lifetime (in days) of registration activation URL sent to a new user
-    forgot:
-      lifetime: 3       # lifetime (in days) of change password URL sent to a user
-
-
-email:
-  smtp:
-    host: smtp.mail.ru
-    port: 465
-  username: test@mail.ru
-  password: testtest
-  template:
-    auth:
-      activation:
-        subject: "[Bloggy] Activate your profile"
-        body: "Please, follow this link to activate your profile in Bloggy: %s"
-      confirmation:
-        subject: "[Bloggy] Successful registration"
-        body: "Congratulations! You have benn successfully registrated in Bloggy!"
-      reset:
-        subject: "[Bloggy] Change your password"
-        body: "Please, follow this link to change your password: %s"
-      success:
-        subject: "[Bloggy] Your password is changed"
-        body: "Yo have successfully change your password"
+logging:
+  config: classpath:logback.groovy
