--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'org.mapstruct:mapstruct-jdk8:1.3.1.Final'
     implementation 'org.mapstruct:mapstruct:1.3.1.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+    runtime 'org.codehaus.groovy:groovy'
 
     testCompile 'org.springframework.boot:spring-boot-starter-test'
     testCompile 'com.h2database:h2'
